# omeg-bot

./: .gitignore  Cargo.toml
src/: extrathings.md  main.rs
src/commands/: cancel.rs  leave.rs  message.rs  mod.rs  ping.rs  start.rs
