[package]
name = "omeg-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
redis = "0.24.0"
serde_json = "1.0.114"
